--- a/content/index.mdx
+++ b/content/index.mdx
@@ -1,11 +1,53 @@
----
-title: Codewars
-sidebar_label: Introduction
-slug: /
----
+public class PacmanGame extends Frame {
+    private static final int CELL_SIZE = 20;
 
-Codewars is a platform that helps you learn, train, and improve your coding skills by solving programming tasks of many types and difficulty levels. You choose how you would like to learn. Do you want to take on increasingly difficult challenges? Maybe you prefer training through repetition and by improving your solutions. After solving a task, compare your answer with other users and learn from them or help less experienced users by answering their questions.
+    private int pacmanX = 10;
+    private int pacmanY = 10;
 
-By following this tutorial, you will learn how to create a new account on Codewars, configure it for an optimal training experience, and become familiar with basic elements of the user interface. Soon you will be able to face the challenges collected in Codewars' library and start learning!
+    public PacmanGame() {
+        setTitle("Pacman Game");
+        setSize(400, 400);
+        setResizable(false);
+        setVisible(true);
 
-If you haven't joined yet, read how to [register](/getting-started/registering/) a new account on Codewars.
+        addWindowListener(new WindowAdapter() {
+            public void windowClosing(WindowEvent e) {
+                System.exit(0);
+            }
+        });
+
+        addKeyListener(new KeyAdapter() {
+            public void keyPressed(KeyEvent e) {
+                handleKeyPress(e);
+            }
+        });
+    }
+
+    private void handleKeyPress(KeyEvent e) {
+        int keyCode = e.getKeyCode();
+
+        if (keyCode == KeyEvent.VK_UP) {
+            pacmanY -= 1;
+        } else if (keyCode == KeyEvent.VK_DOWN) {
+            pacmanY += 1;
+        } else if (keyCode == KeyEvent.VK_LEFT) {
+            pacmanX -= 1;
+        } else if (keyCode == KeyEvent.VK_RIGHT) {
+            pacmanX += 1;
+        }
+
+        repaint();
+    }
+
+    public void paint(Graphics g) {
+        g.setColor(Color.BLACK);
+        g.fillRect(0, 0, getWidth(), getHeight());
+
+        g.setColor(Color.YELLOW);
+        g.fillArc(pacmanX * CELL_SIZE, pacmanY * CELL_SIZE, CELL_SIZE, CELL_SIZE, 45, 270);
+    }
+
+    public static void main(String[] args) {
+        new PacmanGame();
+    }
+}
